// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css handles media query merges 1`] = `
.glamor-0 {
  color: darkslateblue;
  color: red;
  color: purple;
}

@media (min-width:420px) {
  .glamor-0 {
    color: amethyst;
  }
}

@media (min-width:640px) {
  .glamor-0 {
    color: rebeccapurple;
  }
}

@media (min-width:960px) {
  .glamor-0 {
    color: burlywood;
  }
}

@media (min-width:640px) {
  .glamor-0 {
    color: blue;
  }
}

@media (min-width:640px) {
  .glamor-0 {
    color: aquamarine;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css handles media query merges 2`] = `
".css-yno01n {
  color: darkslateblue;
  color: red;
  color: purple;
}

@media (min-width:420px) {
  .css-yno01n {
    color: amethyst;
  }
}

@media (min-width:640px) {
  .css-yno01n {
    color: rebeccapurple;
  }
}

@media (min-width:960px) {
  .css-yno01n {
    color: burlywood;
  }
}

@media (min-width:640px) {
  .css-yno01n {
    color: blue;
  }
}

@media (min-width:640px) {
  .css-yno01n {
    color: aquamarine;
  }
}"
`;
